# Outdoor-Navigational-Watch

./: CMakeLists.txt  README.md  app.overlay  prj.conf
dts/bindings/: Ch7SegDisplay.yaml  qst,qmc5883l.yaml
src/: Ch7SegDisplay.c  Ch7SegDisplay.h  SystemStats.h  altimeter.c  altimeter.h  battery.c  battery.h  compass.c  compass.h  data.h  display.c  gnss.c  gnss.h  keypad.c  keypad.h  main.c
